--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express-hbs": "^1.0.4",
     "express-session": "^1.15.6",
     "hbs": "^4.0.1",
+    "jquery": "^3.3.1",
     "pug": "^2.0.1",
     "socket.io": "^2.0.4"
   },
