--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "express-handlebars": "^3.0.0",
     "express-hbs": "^1.0.4",
     "express-session": "^1.15.6",
+    "forever-monitor": "^1.7.1",
     "hbs": "^4.0.1",
     "jquery": "^3.3.1",
     "pug": "^2.0.1",
